# Embedded-Rust-STM32

./: Cargo.toml  LICENSE  README.md  build.rs  memory.x
.cargo/: config.toml
src/: main.rs
