[package]
authors = ["Tide00 <taegukusa@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
stm32f1xx-hal = {version = "0.10.0",features = [ "rt", "stm32f103" ],optional = true}
cortex-m = "0.6.1"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
 alloc-cortex-m = "0.4.0"


# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false


[features]
default = []
uart_print = ["stm32f1xx-hal"]

[profile.release]
codegen-units = 1 # better optimizations
debug = false # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
